--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,16 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/kit": "^2.43.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
-		"svelte": "^5.39.5",
-		"svelte-check": "^4.3.2",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.7"
-	}
+        "devDependencies": {
+                "@sveltejs/adapter-auto": "^6.1.0",
+                "@sveltejs/kit": "^2.43.2",
+                "@sveltejs/vite-plugin-svelte": "^6.2.0",
+                "svelte": "^5.39.5",
+                "svelte-check": "^4.3.2",
+                "typescript": "^5.9.2",
+                "vite": "^7.1.7"
+        },
+        "dependencies": {
+                "@ac/data": "file:../../packages/data"
+        }
 }
