--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -5,6 +5,9 @@
   "exports": {
     "./bus": {
       "import": "./bus.ts"
+    },
+    "./syncClient": {
+      "import": "./syncClient.ts"
     }
   }
 }
