--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,40 +1,48 @@
 {
-	"name": "web",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-        "devDependencies": {
-                "@sveltejs/adapter-auto": "^6.1.0",
-                "@sveltejs/kit": "^2.43.2",
-                "@sveltejs/vite-plugin-svelte": "^6.2.0",
-                "@tailwindcss/forms": "^0.5.9",
-                "autoprefixer": "^10.4.20",
-                "postcss": "^8.4.49",
-                "svelte": "^5.39.5",
-                "svelte-check": "^4.3.2",
-                "tailwindcss": "^3.4.17",
-                "typescript": "^5.9.2",
-                "vite": "^7.1.7"
-        },
-        "dependencies": {
-                "@ac/data": "file:../../packages/data",
-                "@marco/domain-convites": "0.1.0",
-                "@marco/domain-eventos": "0.1.0",
-                "@marco/domain-fornecedores": "0.1.0",
-                "@marco/domain-mensagens": "0.1.0",
-                "@marco/domain-tarefas": "0.1.0",
-                "@marco/features-convites": "0.1.0",
-                "@marco/features-fornecedores": "0.1.0",
-                "@marco/features-mensagens": "0.1.0",
-                "@marco/features-tarefas": "0.1.0",
-                "@marco/platform": "0.1.0"
-        }
+  "name": "web",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint src --ext .ts,.js,.svelte",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "marco-format check src/**/*.{js,ts,svelte} static/**/*.{json,md}",
+    "format:fix": "marco-format write src/**/*.{js,ts,svelte} static/**/*.{json,md}",
+    "test": "npm run test:unit",
+    "test:unit": "node ../../tools/scripts/run-tests.mjs unit",
+    "test:visual": "node ../../tools/scripts/run-tests.mjs visual",
+    "package": "npm run build && marco-package web build"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^6.1.0",
+    "@sveltejs/kit": "^2.43.2",
+    "@sveltejs/vite-plugin-svelte": "^6.2.0",
+    "@tailwindcss/forms": "^0.5.9",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "svelte": "^5.39.5",
+    "svelte-check": "^4.3.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "@ac/data": "file:../../packages/data",
+    "@marco/domain-convites": "0.1.0",
+    "@marco/domain-eventos": "0.1.0",
+    "@marco/domain-fornecedores": "0.1.0",
+    "@marco/domain-mensagens": "0.1.0",
+    "@marco/domain-tarefas": "0.1.0",
+    "@marco/features-convites": "0.1.0",
+    "@marco/features-fornecedores": "0.1.0",
+    "@marco/features-mensagens": "0.1.0",
+    "@marco/features-tarefas": "0.1.0",
+    "@marco/platform": "0.1.0"
+  }
 }
