--- a/package.json
+++ b/package.json
@@ -2,15 +2,43 @@
   "name": "projeto-marco",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "npm@11.4.2",
+  "bin": {
+    "marco-format": "./tools/scripts/run-prettier.mjs",
+    "marco-package": "./tools/scripts/package-app.mjs",
+    "marco-tests": "./tools/scripts/run-tests.mjs"
+  },
   "scripts": {
-    "test:visual": "playwright test",
-    "pretest:visual": "npm --workspace web run build",
-    "build:web": "npm --workspace web run build",
+    "dev": "turbo run dev --parallel",
+    "build": "turbo run build",
+    "build:web": "turbo run build --filter=web",
+    "build:api": "turbo run build --filter=@marco/api",
+    "dev:web": "turbo run dev --filter=web",
+    "dev:api": "turbo run dev --filter=@marco/api",
     "preview:web": "npm --workspace web run preview",
-    "dev:web": "npm --workspace web run dev"
+    "lint": "turbo run lint && turbo run format",
+    "lint:web": "turbo run lint --filter=web",
+    "lint:api": "turbo run lint --filter=@marco/api",
+    "lint:fix": "turbo run lint -- --fix",
+    "format": "turbo run format",
+    "format:fix": "turbo run format -- --write",
+    "test": "turbo run test",
+    "test:unit": "node ./tools/scripts/run-tests.mjs unit",
+    "test:visual": "turbo run test:visual --filter=web",
+    "test:visual:ci": "turbo run test:visual --filter=web -- --reporter=line,html",
+    "package": "turbo run package"
   },
   "devDependencies": {
-    "@playwright/test": "^1.42.1"
+    "@eslint/js": "^9.17.0",
+    "@playwright/test": "^1.42.1",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.46.1",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.4",
+    "turbo": "^2.3.0",
+    "typescript-eslint": "^8.20.0"
   },
   "workspaces": [
     "apps/web",
