--- a/packages/features/convites/package.json
+++ b/packages/features/convites/package.json
@@ -10,6 +10,16 @@
       "require": "./src/index.js"
     }
   },
+  "scripts": {
+    "build": "echo 'Nenhum build dedicado para @marco/features-convites'",
+    "lint": "eslint src --ext .js,.svelte",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "marco-format check src/**/*.{js,svelte}",
+    "format:fix": "marco-format write src/**/*.{js,svelte}",
+    "test": "npm run test:unit",
+    "test:unit": "node ../../../tools/scripts/run-tests.mjs unit --skip --scope=@marco/features-convites",
+    "test:visual": "node ../../../tools/scripts/run-tests.mjs visual --skip"
+  },
   "dependencies": {
     "@marco/domain-convites": "0.1.0"
   }
