Add widget embed test and fix mounting

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 node_modules/
+.turbo/
+apps/web/.turbo/
+apps/web/dist/
+packages/*/.turbo/
+packages/*/*/.turbo/
 playwright-report/
 test-results/
 tests/visual/screenshots/
