--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,44 +33,13 @@ jobs:
         run: npm install
         if: steps.workspace.outputs.has_node == 'true'
 
-      - name: Install Playwright browsers
+      - name: Instalar navegadores Playwright
         run: npx playwright install --with-deps
         if: steps.workspace.outputs.has_node == 'true'
 
-      - name: Lint e Prettier
-        run: npm run lint
+      - name: Testes end-to-end
+        run: npm test
         if: steps.workspace.outputs.has_node == 'true'
-
-      - name: Testes unitários
-        run: npm run test:unit
-        if: steps.workspace.outputs.has_node == 'true'
-
-      - name: Testes visuais
-        run: npm run test:visual:ci
-        if: steps.workspace.outputs.has_node == 'true'
-
-      - name: Publicar relatório visual
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report
-
-      - name: Build workspaces
-        run: npm run build
-        if: steps.workspace.outputs.has_node == 'true'
-
-      - name: Empacotar artefatos
-        run: npm run package
-        if: steps.workspace.outputs.has_node == 'true'
-
-      - name: Publicar builds
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: artifacts
-          if-no-files-found: warn
 
       - name: Registrar verificação estática
         if: steps.workspace.outputs.has_node == 'false'
