--- a/catalog/ui-extensions.json
+++ b/catalog/ui-extensions.json
@@ -4,6 +4,7 @@
     { "id": "app.login", "iconRef": "ac-i-status-online", "tooltipKey": "app.footer.login.ok", "state": "ok", "priority": 100 }
   ],
   "header": [
-    { "id": "app.darkmode", "iconRef": "ac-i-moon", "tooltipKey": "app.header.darkmode", "align": "end", "size": "sm" }
+    { "id": "app.darkmode", "iconRef": "ac-i-moon", "tooltipKey": "app.header.darkmode", "align": "end", "size": "sm" },
+    { "id": "app.locale", "iconRef": "ac-i-globe", "tooltipKey": "app.header.locale", "align": "end", "size": "sm" }
   ]
 }
