Ensure Playwright browsers install and stabilize src localization test

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "pretest": "playwright install chromium",
     "test": "playwright test"
   },
   "devDependencies": {
