--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "projeto-marco",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "pretest": "playwright install chromium",
-    "test": "playwright test"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.49.0"
-  }
+  "devDependencies": { "@playwright/test": "1.47.1" },
+  "scripts": { "test:e2e": "playwright test" }
 }
