--- a/appbase/config/app.config.json
+++ b/appbase/config/app.config.json
@@ -1,7 +1,7 @@
 {
-  "mode": "single-miniapp",
-  "miniapp_id": "pb-consignado",
+  "mode": "clean",
+  "mobile_only": true,
   "worker_url": "https://SEU-WORKER.workers.dev",
   "licensing": { "plan_required": "pro", "grace_days": 3 },
-  "features": { "themes": true, "multiuser": true, "fullscreen": true }
+  "features": { "themes": true, "multiuser": true, "fullscreen": false }
 }
