--- a/.github/workflows/ci-clean.yml
+++ b/.github/workflows/ci-clean.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: "20" }
+        with:
+          node-version: "20"
       - run: npm ci || npm i
       - run: npx playwright install --with-deps
       - run: npm run -s test:e2e || npm run -s test || echo "ok"
