Fix miniapp dev server asset resolution

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "node tools/serve-miniapp.mjs",
     "test": "playwright test"
   },
   "devDependencies": {
