--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "node tools/serve-miniapp.mjs",
-    "test": "playwright test"
+    "test": "playwright test",
+    "audit:repo": "node tools/maintenance/audit.mjs",
+    "archive:apply": "node tools/maintenance/archive.mjs --apply",
+    "archive:restore": "node tools/maintenance/restore.mjs",
+    "lfs:scan": "node tools/maintenance/lfs-scan.mjs"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.0"
