--- a/miniapps/example/manifest.json
+++ b/miniapps/example/manifest.json
@@ -1,30 +1,15 @@
 {
   "id": "example",
   "name": {
-    "pt-BR": "Example",
-    "en-US": "Example",
-    "es-419": "Example"
+    "pt-BR": "example",
+    "en-US": "example",
+    "es-419": "example"
   },
   "version": "1.0.0",
   "entry": "./index.js",
-  "icons": {
-    "128": "./icon-128.png"
-  },
-  "scopes": ["storage:kv"],
-  "capabilities": ["i18n"],
-  "routes": [
-    {
-      "path": "/",
-      "titleKey": "home.title"
-    },
-    {
-      "path": "/settings",
-      "titleKey": "settings.title",
-      "secure": true
-    }
-  ],
-  "about": {
-    "summary": "MiniApp gerado via scaffold",
-    "publisher": "5 Horas"
-  }
+  "icons": { "128": "./icon-128.png" },
+  "routes": [{ "path": "/", "titleKey": "home.title" }],
+  "capabilities": ["kv","queue"],
+  "summary": "MiniApp gerado via scaffold",
+  "visibility": "public"
 }
