--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "create:miniapp": "tsx scripts/create-miniapp.ts",
+    "backup:export": "tsx scripts/backup-export.ts",
+    "backup:import": "tsx scripts/backup-import.ts",
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "keywords": ["appbase", "miniapps", "plataforma"],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "idb": "^8.0.0"
+  },
   "devDependencies": {
     "@types/node": "^24.8.1",
+    "fake-indexeddb": "^6.0.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   }
