chore(qa): add smoke suite and admin backup validation

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^24.8.1",
     "fake-indexeddb": "^6.0.0",
+    "jsdom": "^25.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.9.3",
