--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
+    "prebuild": "node scripts/prebuild.js",
     "build": "tsc -p tsconfig.json",
+    "postbuild": "node scripts/postbuild.js",
     "create:miniapp": "tsx scripts/create-miniapp.ts",
     "backup:export": "tsx scripts/backup-export.ts",
     "backup:import": "tsx scripts/backup-import.ts",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "build:pages": "cross-env PUBLIC_ADMIN=true BASE_HREF=/Projeto-marco/ npm run build",
+    "deploy:pages": "npm run build:pages && cross-env PUBLIC_ADMIN=true BASE_HREF=/Projeto-marco/ node scripts/deploy-pages.js"
   },
   "keywords": ["appbase", "miniapps", "plataforma"],
   "author": "",
@@ -20,6 +24,8 @@
   },
   "devDependencies": {
     "@types/node": "^24.8.1",
+    "cross-env": "^7.0.3",
+    "fs-extra": "^11.2.0",
     "fake-indexeddb": "^6.0.0",
     "jsdom": "^25.0.0",
     "ts-node": "^10.9.2",
