--- a/docs/miniapps/AdminPanel/manifest.json
+++ b/docs/miniapps/AdminPanel/manifest.json
@@ -1,7 +1,8 @@
 {
-  "id": "admin-panel",
-  "name": "Painel Administrativo",
+  "id": "admin-panel-1",
+  "name": "Painel Administrativo 1",
   "version": "0.1.0",
   "adminOnly": true,
-  "visible": true
+  "visible": true,
+  "entry": "./index.html"
 }
